--- a/TwitterClient/Base.lproj/Main.storyboard
+++ b/TwitterClient/Base.lproj/Main.storyboard
@@ -94,7 +94,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="frx-Aa-BBZ">
                                 <rect key="frame" x="0.0" y="64" width="375" height="559"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pjv-0i-2BM">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pjv-0i-2BM">
                                         <rect key="frame" x="8" y="8" width="80" height="80"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="80" id="EKH-u5-2ys"/>
@@ -113,8 +113,8 @@
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGe-Tb-osY">
-                                        <rect key="frame" x="8" y="96" width="359" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGe-Tb-osY">
+                                        <rect key="frame" x="8" y="96" width="359" height="144"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -122,15 +122,17 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="DGe-Tb-osY" firstAttribute="leading" secondItem="frx-Aa-BBZ" secondAttribute="leading" constant="8" id="0Xt-AK-430"/>
                                     <constraint firstItem="xda-Q5-Hhp" firstAttribute="top" secondItem="frx-Aa-BBZ" secondAttribute="top" constant="8" id="3gK-3d-FSz"/>
                                     <constraint firstAttribute="trailing" secondItem="xda-Q5-Hhp" secondAttribute="trailing" constant="8" id="4gR-wP-Alr"/>
-                                    <constraint firstItem="DGe-Tb-osY" firstAttribute="top" secondItem="pjv-0i-2BM" secondAttribute="bottom" constant="8" id="9sb-8c-Irv"/>
                                     <constraint firstItem="pjv-0i-2BM" firstAttribute="top" secondItem="frx-Aa-BBZ" secondAttribute="top" constant="8" id="Dwe-w6-VGM"/>
-                                    <constraint firstAttribute="trailing" secondItem="DGe-Tb-osY" secondAttribute="trailing" constant="8" id="Er9-0T-j7j"/>
+                                    <constraint firstItem="DGe-Tb-osY" firstAttribute="top" secondItem="pjv-0i-2BM" secondAttribute="bottom" constant="8" id="Ema-b4-H3x"/>
+                                    <constraint firstItem="DGe-Tb-osY" firstAttribute="bottom" secondItem="frx-Aa-BBZ" secondAttribute="bottomMargin" constant="-311" id="FJ6-h7-oEc"/>
                                     <constraint firstItem="pjv-0i-2BM" firstAttribute="leading" secondItem="frx-Aa-BBZ" secondAttribute="leading" constant="8" id="Gis-ol-wzw"/>
                                     <constraint firstItem="bPX-su-qKA" firstAttribute="top" secondItem="frx-Aa-BBZ" secondAttribute="top" constant="8" id="HOd-xj-fl1"/>
-                                    <constraint firstAttribute="bottom" secondItem="DGe-Tb-osY" secondAttribute="bottom" constant="442" id="W1e-PV-cM4"/>
+                                    <constraint firstItem="DGe-Tb-osY" firstAttribute="trailing" secondItem="xda-Q5-Hhp" secondAttribute="trailing" id="I1B-gF-EHM"/>
+                                    <constraint firstItem="DGe-Tb-osY" firstAttribute="top" secondItem="pjv-0i-2BM" secondAttribute="bottom" constant="8" symbolic="YES" id="M6H-2o-omt"/>
+                                    <constraint firstItem="DGe-Tb-osY" firstAttribute="leading" secondItem="pjv-0i-2BM" secondAttribute="leading" id="daT-w1-zyP"/>
+                                    <constraint firstItem="DGe-Tb-osY" firstAttribute="leading" secondItem="frx-Aa-BBZ" secondAttribute="leading" constant="8" id="o1R-fx-07Z"/>
                                     <constraint firstItem="bPX-su-qKA" firstAttribute="leading" secondItem="pjv-0i-2BM" secondAttribute="trailing" constant="8" id="x7U-9b-JJg"/>
                                 </constraints>
                             </view>
