--- a/TwitterClient/Base.lproj/Main.storyboard
+++ b/TwitterClient/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="7pZ-kJ-ZRQ">
                                 <rect key="frame" x="313" y="7" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Profile"/>
                                 <connections>
                                     <action selector="profileViewButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0ML-zi-pVy"/>
                                     <segue destination="TyI-y3-HSf" kind="show" identifier="profileSegue" id="YS0-3Y-lUG"/>
@@ -108,13 +108,13 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xda-Q5-Hhp">
-                                        <rect key="frame" x="325" y="8" width="42" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="336" y="8" width="31" height="14.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGe-Tb-osY">
-                                        <rect key="frame" x="8" y="96" width="359" height="144"/>
+                                        <rect key="frame" x="8" y="96" width="359" height="89"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -126,7 +126,7 @@
                                     <constraint firstAttribute="trailing" secondItem="xda-Q5-Hhp" secondAttribute="trailing" constant="8" id="4gR-wP-Alr"/>
                                     <constraint firstItem="pjv-0i-2BM" firstAttribute="top" secondItem="frx-Aa-BBZ" secondAttribute="top" constant="8" id="Dwe-w6-VGM"/>
                                     <constraint firstItem="DGe-Tb-osY" firstAttribute="top" secondItem="pjv-0i-2BM" secondAttribute="bottom" constant="8" id="Ema-b4-H3x"/>
-                                    <constraint firstItem="DGe-Tb-osY" firstAttribute="bottom" secondItem="frx-Aa-BBZ" secondAttribute="bottomMargin" constant="-311" id="FJ6-h7-oEc"/>
+                                    <constraint firstItem="DGe-Tb-osY" firstAttribute="bottom" secondItem="frx-Aa-BBZ" secondAttribute="bottomMargin" constant="-366" id="FJ6-h7-oEc"/>
                                     <constraint firstItem="pjv-0i-2BM" firstAttribute="leading" secondItem="frx-Aa-BBZ" secondAttribute="leading" constant="8" id="Gis-ol-wzw"/>
                                     <constraint firstItem="bPX-su-qKA" firstAttribute="top" secondItem="frx-Aa-BBZ" secondAttribute="top" constant="8" id="HOd-xj-fl1"/>
                                     <constraint firstItem="DGe-Tb-osY" firstAttribute="trailing" secondItem="xda-Q5-Hhp" secondAttribute="trailing" id="I1B-gF-EHM"/>
@@ -171,7 +171,28 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="91j-eB-vJI">
                                 <rect key="frame" x="0.0" y="64" width="375" height="559"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GWb-IS-WWd">
+                                        <rect key="frame" x="8" y="8" width="80" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="Tpi-1a-zUg"/>
+                                            <constraint firstAttribute="height" constant="80" id="m9p-H2-lbS"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wcl-oE-t80">
+                                        <rect key="frame" x="96" y="8" width="79" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="GWb-IS-WWd" firstAttribute="top" secondItem="91j-eB-vJI" secondAttribute="top" constant="8" id="0J9-RN-QHM"/>
+                                    <constraint firstItem="wcl-oE-t80" firstAttribute="leading" secondItem="GWb-IS-WWd" secondAttribute="trailing" constant="8" id="Dyr-92-jUc"/>
+                                    <constraint firstItem="GWb-IS-WWd" firstAttribute="leading" secondItem="91j-eB-vJI" secondAttribute="leading" constant="8" id="gMW-Z4-oz4"/>
+                                    <constraint firstItem="wcl-oE-t80" firstAttribute="top" secondItem="91j-eB-vJI" secondAttribute="top" constant="8" id="hNE-yX-ECn"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -182,6 +203,10 @@
                             <constraint firstItem="8uX-8b-xpc" firstAttribute="top" secondItem="91j-eB-vJI" secondAttribute="bottom" id="uGB-WR-Qh1"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="userProfileImage" destination="GWb-IS-WWd" id="g58-UQ-7jv"/>
+                        <outlet property="usernameLabel" destination="wcl-oE-t80" id="YKG-7U-hO7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SR7-jI-Mux" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
