--- a/TwitterClient/TweetCell.xib
+++ b/TwitterClient/TweetCell.xib
@@ -18,21 +18,14 @@
                 <rect key="frame" x="0.0" y="0.0" width="427" height="153.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6W4-LL-7Cb">
-                        <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="80" id="DYZ-1A-zfd"/>
-                            <constraint firstAttribute="width" constant="80" id="SUQ-fx-qC3"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="So0-zp-JkD" customClass="tweetCell">
-                        <rect key="frame" x="88" y="8" width="101" height="26.5"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                        <rect key="frame" x="61" y="8" width="92" height="24"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BMC-2r-f7D">
-                        <rect key="frame" x="8" y="88" width="411" height="57.5"/>
+                        <rect key="frame" x="8" y="61" width="411" height="84.5"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -43,6 +36,13 @@
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6W4-LL-7Cb">
+                        <rect key="frame" x="8" y="8" width="45" height="45"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="45" id="DYZ-1A-zfd"/>
+                            <constraint firstAttribute="width" constant="45" id="SUQ-fx-qC3"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
@@ -52,15 +52,15 @@
                     <constraint firstItem="BMC-2r-f7D" firstAttribute="top" secondItem="6W4-LL-7Cb" secondAttribute="bottom" constant="8" id="8db-sm-tzO"/>
                     <constraint firstItem="NGN-bu-CzA" firstAttribute="top" secondItem="bTT-4J-8FS" secondAttribute="top" constant="8" id="A8i-rz-Paa"/>
                     <constraint firstAttribute="bottom" secondItem="BMC-2r-f7D" secondAttribute="bottom" constant="8" id="Dtb-cC-Yx7"/>
+                    <constraint firstItem="6W4-LL-7Cb" firstAttribute="top" secondItem="bTT-4J-8FS" secondAttribute="top" constant="8" id="TA4-Xs-eX7"/>
+                    <constraint firstItem="6W4-LL-7Cb" firstAttribute="leading" secondItem="bTT-4J-8FS" secondAttribute="leading" constant="8" id="XmE-RA-LFc"/>
                     <constraint firstItem="BMC-2r-f7D" firstAttribute="leading" secondItem="bTT-4J-8FS" secondAttribute="leading" constant="8" id="bXj-j1-fiY"/>
-                    <constraint firstItem="6W4-LL-7Cb" firstAttribute="top" secondItem="bTT-4J-8FS" secondAttribute="top" id="bl7-bA-PtL"/>
                     <constraint firstItem="BMC-2r-f7D" firstAttribute="top" secondItem="6W4-LL-7Cb" secondAttribute="bottom" constant="8" id="dNW-jb-sx0"/>
                     <constraint firstAttribute="trailing" secondItem="BMC-2r-f7D" secondAttribute="trailing" constant="8" id="dtn-XQ-pGB"/>
                     <constraint firstAttribute="trailing" secondItem="BMC-2r-f7D" secondAttribute="trailing" constant="8" id="fhu-U8-Tsa"/>
                     <constraint firstItem="So0-zp-JkD" firstAttribute="top" secondItem="bTT-4J-8FS" secondAttribute="top" constant="8" id="tMf-N7-Xil"/>
                     <constraint firstItem="BMC-2r-f7D" firstAttribute="top" secondItem="6W4-LL-7Cb" secondAttribute="bottom" constant="8" id="wrp-Ct-gOp"/>
                     <constraint firstItem="BMC-2r-f7D" firstAttribute="leading" secondItem="bTT-4J-8FS" secondAttribute="leading" constant="8" id="x2o-av-iLw"/>
-                    <constraint firstItem="6W4-LL-7Cb" firstAttribute="leading" secondItem="bTT-4J-8FS" secondAttribute="leading" id="yce-zN-Fzy"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
