--- a/TwitterClient/Base.lproj/Main.storyboard
+++ b/TwitterClient/Base.lproj/Main.storyboard
@@ -92,14 +92,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tto-yu-QeC">
-                                <rect key="frame" x="0.0" y="64" width="375" height="559"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="tto-yu-QeC" secondAttribute="trailing" id="8h9-Qb-taO"/>
-                            <constraint firstItem="tto-yu-QeC" firstAttribute="top" secondItem="CKR-O9-por" secondAttribute="top" constant="64" id="FLr-Jk-2GC"/>
+                            <constraint firstItem="tto-yu-QeC" firstAttribute="top" secondItem="CKR-O9-por" secondAttribute="top" id="FLr-Jk-2GC"/>
                             <constraint firstItem="tto-yu-QeC" firstAttribute="leading" secondItem="CKR-O9-por" secondAttribute="leading" id="Uy9-1N-YLO"/>
                             <constraint firstItem="iEB-cH-fQ3" firstAttribute="top" secondItem="tto-yu-QeC" secondAttribute="bottom" id="w2h-KJ-5mE"/>
                         </constraints>
@@ -110,7 +110,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4ml-R9-L5r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-6578.5" y="-90.5"/>
+            <point key="canvasLocation" x="-6580" y="-91.304347826086968"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="BKv-TC-LqK">
